Sign distribution tar files, make .gz, .xz, and .lzop variants
Uses the default gpg key.

make unsigned-dist if no signature is desired.

set kittypes to any or all of gz xz lzop to control which
variants are built.

--- a/INSTALL
+++ b/INSTALL
@@ -19,11 +19,19 @@ To rebuild man page (from pod, requires pod2man from Pod::Man):
 
 make
 
-To make a tarball:
+To make tarballs (kittypes compression(s))  with signature using default gpg key:
 
 make dist
 
-To remove a tarball and its build directory:
+To make only gz and xz (any file type recognized by tar -a can be used)
+
+make dist kittypes="gz xz"
+
+To make tarballs without signature
+
+make unsigned-dist
+
+To remove tarballs and packaging directory for current version:
 
 make clean
 
