--- a/ascron.1
+++ b/ascron.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ASCRON 1"
-.TH ASCRON 1 "2022-11-13" "perl v5.8.8" "Interactive cron simulator"
+.TH ASCRON 1 "2022-11-17" "perl v5.8.8" "Interactive cron simulator"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -138,11 +138,12 @@
 ascron \- Run cron jobs from a terminal
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-.Vb 4
+.Vb 5
 \& ascron   command | job\-regexp
-\&           \-\-format  \-\-job    \-\-list    \-\-mail\-action \-\-locale \-\-match
-\&           \-\-system  \-\-table  \-\-user    \-\-debug=file  \-\-tz      \-\-notz
-\&           \-\-help    \-\-man    \-\-version
+\&           \-\-format  \-\-job     \-\-list    \-\-mail\-action \-\-locale \-\-match
+\&           \-\-system  \-\-table   \-\-user    \-\-debug=file  \-\-tz      \-\-notz
+\&           \-\-detach  \-\-pidfile
+\&           \-\-help    \-\-man     \-\-version
 .Ve
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
@@ -171,12 +172,21 @@ The following options are used to select the \fIcrontab\fR(s) searched, and the 
 \&\fBsystem\fR \fIcrontabs\fR include the user under which a job runs.  These include \fI/etc/crontab\fR and \fI/etc/cron.d/*\fR.
 \&\fBuser\fR \fIcrontabs\fR do not include the user.  The user is implied by the Icrontab>'s location or by the \fB\-\-format\fR option.  The user may also be specified by the \fB\-\-user\fR option.
 .PP
-Options contained in \fI~/.ascron\fR will be applied before any specified on the command line.
-.IP "\fB\-d\fR \fB\-\-debug\fR=\fIfile\fR" 4
-.IX Item "-d --debug=file"
+Options contained in \fI~/.ascron\fR will be applied before any specified on the command line.  The \fB\-\-no\fR forms of options may be useful on the command line to override \fI~/.ascron\fR.
+.IP "\fB\-d\fR \fB\-\-debug\fR=\fIfile\fR \fB\-\-nodebug\fR" 4
+.IX Item "-d --debug=file --nodebug"
 Writes a detailed log of processing events to \fIfile\fR.  \fIfile\fR may be '\-' for \fIstderr\fR.
 .Sp
 While intended for debugging \fIascron\fR, some of the detail may be helpful for understanding how \fIcron\fR processes a job.
+.IP "\fB\-D\fR \fB\-\-[no]detach\fR \fB\-\-[no]daemon\fR" 4
+.IX Item "-D --[no]detach --[no]daemon"
+\&\fIascron\fR daemonizes itself before running the job.  This frees your terminal when executing long-running jobs, and is how \fIcrond\fR runs.
+.Sp
+This does not affect \fB\-\-debug\fR output if \fIstderr\fR is specified.
+.Sp
+Ues \fB\-\-pidfile\fR if you want to capture the \s-1PID\s0 of the daemon.
+.Sp
+Consider placing \fB\-\-detach\fR in your \fI.ascron\fR if long-running jobs are the norm.
 .IP "\fB\-f\fR \fB\-\-format\fR=\fIsystem\fR|\fIuser\fR" 4
 .IX Item "-f --format=system|user"
 Specifies the format of the \fIcrontab\fR(s) read by the command.
@@ -185,14 +195,19 @@ Specifies the format of the \fIcrontab\fR(s) read by the command.
 Specifies the job(s) to be located in the \fIcrontab\fR(s).  The command arguments are unanchored regular expressions that match each \fIcrontab\fR command.  If more than one argument is specified, they are combined with \fIor\fR; that is, a command is selected if any of the arguments matches.  By default, the first matching command will be used, but \fB\-\-match\fR can specify a subsequent match.
 .Sp
 If \fB\-\-job\fR is not specified, the command is specified by the command line arguments.
-.IP "\fB\-l\fR \fB\-\-list\fR" 4
-.IX Item "-l --list"
+.IP "\fB\-l\fR \fB\-\-[no]list\fR" 4
+.IX Item "-l --[no]list"
 With \fB\-\-job\fR, lists all matching jobs (and does not execute any).  Useful with multiple matches to determine a value of \fB\-\-match\fR that will select the desired job.
 .IP "\fB\-M\fR \fB\-\-mail\-action\fR=\fIdiscard\fR|\fIdisplay\fR|\fIsend\fR" 4
 .IX Item "-M --mail-action=discard|display|send"
 Output on \fIstdout\fR or \fIstderr\fR from \fIcron\fR jobs is (usually) e\-mailed; the destination, source, subject, and format are controlled by environment variables set om tje \fIcrontab\fR.
 .Sp
 By default, \fIascron\fR faithfully emulates this behavior \*(-- which can be inconvenient for debugging jobs.  \fB\-\-mail\-action\fR can override the default action so that the mail message is displayed (on \fIstdout\fR) or discarded.
+.IP "\fB\-p\fR \fB\-\-pidfile\fR=\fIfile\fR" 4
+.IX Item "-p --pidfile=file"
+Write the \s-1PID\s0 of the job to \fIfile\fR as \fIj:<pid\fR>.
+.Sp
+When daemonizing, write the \s-1PID\s0 of the daemon to \fIfile\fR as \fId:<pid\fR>.  The order of the PIDs is unpredictable.
 .IP "\fB\-t\fR \fB\-\-table\fR=\fIfile\fR" 4
 .IX Item "-t --table=file"
 Selects the \fIcrontab\fR file used to extract environment variables, and (with \fB\-\-job\fR) the command.
@@ -293,13 +308,18 @@ variables (but not environment variables):
 \&\f(CW%user\fR%       \- expands to \fB\f(CB$USER\fB\fR
 .SH "EXAMPLES"
 .IX Header "EXAMPLES"
-.SS "locate and run jobs matching \fIBackup\fP in the system tables"
-.IX Subsection "locate and run jobs matching Backup in the system tables"
+.SS "locate and run first job matching \fIBackup\fP in the system tables"
+.IX Subsection "locate and run first job matching Backup in the system tables"
 .Vb 1
 \&    ascron \-\-job Backup
 .Ve
-.SS "Locate and run jobs matching \fIBackup\fP or \fIrsync\fP in \fIroot\fP's private table"
-.IX Subsection "Locate and run jobs matching Backup or rsync in root's private table"
+.SS "Run \fIBackup\fP from the system tables from a daemon"
+.IX Subsection "Run Backup from the system tables from a daemon"
+.Vb 1
+\&    ascron \-\-job Backup \-\-detach \-\-pidfile=Backup.pid
+.Ve
+.SS "Locate and run first job matching \fIBackup\fP or \fIrsync\fP in \fIroot\fP's private table"
+.IX Subsection "Locate and run first job matching Backup or rsync in root's private table"
 .Vb 1
 \&    ascron \-\-job Backup rsync \-\-user=root
 .Ve
