--- a/ascron.1
+++ b/ascron.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ASCRON 1"
-.TH ASCRON 1 "2022-11-18" "perl v5.8.8" "Interactive cron simulator"
+.TH ASCRON 1 "2022-11-18" "ascron V1.0.2" "Interactive cron simulator"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
